--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
       class="d-flex flex-column justify-content-center align-items-center"
     >
       <div class="hero-container" data-aos="fade-in">
-        <h1>Jharol Rojas</h1>
-        <p>
+        <h1 class="text-center">Jharol Rojas</h1>
+        <p class="text-center">
           Soy
           <span
             class="typed"
