--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                     ><i class="bx bx-plus"></i
                   ></a>
                   <a
-                    href="https://comfy-swan-d8ea2e.netlify.app"
+                    href="https://jharolrojasmercadolibre.netlify.app/"
                     target="_blank"
                     title="More Details"
                     ><i class="bx bx-link"></i
@@ -406,7 +406,7 @@
                     ><i class="bx bx-plus"></i
                   ></a>
                   <a
-                    href="https://superlative-druid-3eccee.netlify.app"
+                    href="jharolrojaspokedex.netlify.app"
                     target="_blank"
                     title="More Details"
                     ><i class="bx bx-link"></i
@@ -432,7 +432,7 @@
                     ><i class="bx bx-plus"></i
                   ></a>
                   <a
-                    href="https://jolly-banoffee-06abc7.netlify.app"
+                    href="jharolrojasrickandmorty.netlify.app"
                     target="_blank"
                     title="More Details"
                     ><i class="bx bx-link"></i
