--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                   simplicidad, flexibilidad, respeto, tolerancia y perdón.
                 </p>
 
-                <a href="Jharol Rojas Cv" download>
+                <a href="JharolRojasCV.pdf" download>
                   <div class="cv">Descargar CV</div>
                 </a>
               </div>
