--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
                 <img
                   src="assets/img/portfolio/CRUD.png"
@@ -491,7 +491,7 @@
                   ></a>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </section>
