--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
                     ><i class="bx bx-plus"></i
                   ></a>
                   <a
-                    href="jharolrojaspokedex.netlify.app"
+                    href="https://jharolrojaspokedex.netlify.app"
                     target="_blank"
                     title="More Details"
                     ><i class="bx bx-link"></i
@@ -459,7 +459,7 @@
                     ><i class="bx bx-plus"></i
                   ></a>
                   <a
-                    href="https://lighthearted-squirrel-ca1c0b.netlify.app"
+                    href="jharolrojasclima.netlify.app"
                     target="_blank"
                     title="More Details"
                     ><i class="bx bx-link"></i
