--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                     ><i class="bx bx-plus"></i
                   ></a>
                   <a
-                    href="jharolrojasrickandmorty.netlify.app"
+                    href="https://jharolrojasrickandmorty.netlify.app"
                     target="_blank"
                     title="More Details"
                     ><i class="bx bx-link"></i
@@ -459,7 +459,7 @@
                     ><i class="bx bx-plus"></i
                   ></a>
                   <a
-                    href="jharolrojasclima.netlify.app"
+                    href="https://jharolrojasclima.netlify.app"
                     target="_blank"
                     title="More Details"
                     ><i class="bx bx-link"></i
