--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
         <div class="container">
           <div class="section-title">
             <h2>Habilidades</h2>
-            <i>No importa el tamaño, idiota, si no lo que haces con él.</i>
+            <i>No importa el tamaño, idioma, si no lo que haces con él.</i>
           </div>
 
           <div class="row">
