--- a/index.html
+++ b/index.html
@@ -155,27 +155,26 @@
               </p>
               <div class="row">
                 <p>
-                  Tengo 25 años soy ingeniero informática de todas las ramas de
-                  esta bella carrera me inclino más hacia la rama del desarrollo
-                  web.
+                  Tengo 25 años soy licenciado en Ingeniería Informática de la
+                  Universidad Politécnica Territorial de Paria "Luis Mariano
+                  Melgar", Venezuela. Soy una persona constante y abierta a los
+                  retos en donde pueda demostrar mis habilidades, llena de
+                  ambición y progreso por un futuro merecedor.
                 </p>
                 <br />
                 <p>
-                  Mi pasión es vivir , vivir para ayudar , dar y interactuar. Y
-                  el camino que escogí para esto es el del desarrollo web donde
-                  podamos ayudar de la mejor manera con innovación y progreso en
-                  un ambiente donde abunde el aprendizaje, la innovación  y el
-                  crecimiento personal.
+                  Amante del orden, disciplina y estudio. Cada obstáculo y error
+                  es una oportunidad más para seguir evolucionando y alcanzar la
+                  mejor versión de nosotros mismos.
                 </p>
                 <br />
-                <p>Fanatico del orden, la vida, las personas y los animales.</p>
-                <br />
                 <p>
-                  Me defino con los siguientes valores : comunicación,
+                  Fanático de la vida, las personas, la comida y los animales.
+                  Me defino con los siguientes valores: comunicación,
                   simplicidad, flexibilidad, respeto, tolerancia y perdón.
                 </p>
 
-                <a href="JharolRojasCV.pdf" download>
+                <a href="RojasJharolCv.pdf" download>
                   <div class="cv">Descargar CV</div>
                 </a>
               </div>
@@ -502,7 +501,10 @@
         <div class="container">
           <div class="section-title">
             <h2>Habilidades</h2>
-            <i>No importa el tamaño, idioma, si no lo que haces con él.</i>
+            <i
+              >No importa raza, origen o nivel. Si no el como lo usas a tu
+              favor, para lograr grandes resultados.</i
+            >
           </div>
 
           <div class="row">
@@ -667,7 +669,7 @@
                 </div>
                 <div class="my-3">
                   <div class="loading">
-                    Gracias por ponerte en contacto conmigo te responderé  en la
+                    Gracias por ponerte en contacto conmigo te responderé en la
                     brevedad.
                   </div>
                   <!-- <div class="error-message"></div>
@@ -692,25 +694,23 @@
 
     <footer id="footer">
       <!-- <div class=""> -->
-        <div class="footer">
-          
-          <div class="waves">
-           
-            <div class="wave" id="wave1"></div>
-            <div class="wave" id="wave2"></div>
-            <div class="wave" id="wave3"></div>
-            <div class="wave" id="wave4"></div>
-            <div class="copyright">
-              &copy; Jharol<strong><span>Rojas</span></strong>
-            </div>
-            <div class="credits">
-              <!-- All the links in the footer should remain intact. -->
-              <!-- You can delete the links only if you purchased the pro version. -->
-              <!-- Licensing information: https://bootstrapmade.com/license/ -->
-              <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-            </div>
+      <div class="footer">
+        <div class="waves">
+          <div class="wave" id="wave1"></div>
+          <div class="wave" id="wave2"></div>
+          <div class="wave" id="wave3"></div>
+          <div class="wave" id="wave4"></div>
+          <div class="copyright">
+            &copy; Jharol<strong><span>Rojas</span></strong>
+          </div>
+          <div class="credits">
+            <!-- All the links in the footer should remain intact. -->
+            <!-- You can delete the links only if you purchased the pro version. -->
+            <!-- Licensing information: https://bootstrapmade.com/license/ -->
+            <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
           </div>
         </div>
+      </div>
       <!-- </div> -->
     </footer>
 
