--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <header id="header">
       <div class="d-flex flex-column">
         <div class="profile">
-          <img
+          <img loading='lazy'
             src="assets/img/yo.jpg"
             alt=""
             class="img-fluid rounded-circle"
@@ -146,7 +146,7 @@
 
           <div class="row">
             <div class="col-lg-4" data-aos="fade-right">
-              <img src="assets/img/yo2.jpg" class="img-fluid" alt="" />
+              <img loading='lazy' src="assets/img/yo2.jpg" class="img-fluid" alt="" />
             </div>
             <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
               <h3>Desarrollador Web</h3>
@@ -201,7 +201,7 @@
               data-aos="fade-up"
             >
               <div class="content-image-logo">
-                <img src="./assets/img/tecnologias/html.svg" alt="HTML" />
+                <img loading='lazy' src="./assets/img/tecnologias/html.svg" alt="HTML" />
                 <p><strong>HTML</strong></p>
               </div>
             </div>
@@ -211,7 +211,7 @@
               data-aos="fade-up"
             >
               <div class="content-image-logo">
-                <img src="./assets/img/tecnologias/css.svg" alt="HTML" />
+                <img loading='lazy' src="./assets/img/tecnologias/css.svg" alt="HTML" />
                 <p><strong>CSS</strong></p>
               </div>
             </div>
@@ -231,7 +231,7 @@
               data-aos="fade-up"
             >
               <div class="content-image-logo">
-                <img src="./assets/img/tecnologias/bootstrap.svg" alt="HTML" />
+                <img loading='lazy' src="./assets/img/tecnologias/bootstrap.svg" alt="HTML" />
                 <p><strong>BOOTSTRAP</strong></p>
               </div>
             </div>
@@ -241,7 +241,7 @@
               data-aos="fade-up"
             >
               <div class="content-image-logo">
-                <img src="./assets/img/tecnologias/react.svg" alt="HTML" />
+                <img loading='lazy' src="./assets/img/tecnologias/react.svg" alt="HTML" />
                 <p><strong>REACT</strong></p>
               </div>
             </div>
@@ -251,7 +251,7 @@
               data-aos="fade-up"
             >
               <div class="content-image-logo">
-                <img src="./assets/img/tecnologias/redux.svg" alt="HTML" />
+                <img loading='lazy' src="./assets/img/tecnologias/redux.svg" alt="HTML" />
                 <p><strong>REDUX</strong></p>
               </div>
             </div>
@@ -261,7 +261,7 @@
               data-aos="fade-up"
             >
               <div class="content-image-logo">
-                <img src="./assets/img/tecnologias/router.svg" alt="HTML" />
+                <img loading='lazy' src="./assets/img/tecnologias/router.svg" alt="HTML" />
                 <p><strong>ROUTER </strong></p>
               </div>
             </div>
@@ -271,7 +271,7 @@
               data-aos="fade-up"
             >
               <div class="content-image-logo">
-                <img src="./assets/img/tecnologias/git.svg" alt="HTML" />
+                <img loading='lazy' src="./assets/img/tecnologias/git.svg" alt="HTML" />
                 <p><strong>GIT</strong></p>
               </div>
             </div>
@@ -281,7 +281,7 @@
               data-aos="fade-up"
             >
               <div class="content-image-logo">
-                <img src="./assets/img/tecnologias/github.svg" alt="HTML" />
+                <img loading='lazy' src="./assets/img/tecnologias/github.svg" alt="HTML" />
                 <p><strong>GITHUB</strong></p>
               </div>
             </div>
@@ -364,7 +364,7 @@
           >
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
-                <img
+                <img loading='lazy'
                   src="assets/img/portfolio/ecommerce.png"
                   class="img-fluid"
                   alt=""
@@ -390,7 +390,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-card">
               <div class="portfolio-wrap">
-                <img
+                <img loading='lazy'
                   src="assets/img/portfolio/pokemon.png"
                   class="img-fluid"
                   alt=""
@@ -416,7 +416,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-card">
               <div class="portfolio-wrap">
-                <img
+                <img loading='lazy'
                   src="assets/img/portfolio/rickandmorty.png"
                   class="img-fluid"
                   alt=""
@@ -442,7 +442,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-card">
               <div class="portfolio-wrap">
-                <img
+                <img loading='lazy'
                   src="assets/img/portfolio/clima.png"
                   class="img-fluid"
                   alt=""
@@ -469,7 +469,7 @@
 
             <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
-                <img
+                <img loading='lazy'
                   src="assets/img/portfolio/CRUD.png"
                   class="img-fluid"
                   alt=""
