--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <header id="header">
       <div class="d-flex flex-column">
         <div class="profile">
-          <img loading='lazy'
+          <img
             src="assets/img/yo.jpg"
             alt=""
             class="img-fluid rounded-circle"
@@ -146,7 +146,7 @@
 
           <div class="row">
             <div class="col-lg-4" data-aos="fade-right">
-              <img loading='lazy' src="assets/img/yo2.jpg" class="img-fluid" alt="" />
+              <img src="assets/img/yo2.jpg" class="img-fluid" alt="" />
             </div>
             <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
               <h3>Desarrollador Web</h3>
@@ -166,13 +166,12 @@
                   Amante del orden, disciplina y estudio. Cada obstáculo y error
                   es una oportunidad más para seguir evolucionando y alcanzar la
                   mejor versión de nosotros mismos.
+                  
                 </p>
                 <br />
                 <p>
-                  Fanático de la vida, las personas, la comida y los animales.
-                  Me defino con los siguientes valores: comunicación,
-                  simplicidad, flexibilidad, respeto, tolerancia y perdón.
-                </p>
+                  Fanático de la vida, las personas, la comida y los animales. Me defino con los siguientes valores: comunicación, simplicidad, flexibilidad, respeto, tolerancia y perdón.</p>
+             
 
                 <a href="RojasJharolCv.pdf" download>
                   <div class="cv">Descargar CV</div>
@@ -201,7 +200,7 @@
               data-aos="fade-up"
             >
               <div class="content-image-logo">
-                <img loading='lazy' src="./assets/img/tecnologias/html.svg" alt="HTML" />
+                <img src="./assets/img/tecnologias/html.svg" alt="HTML" />
                 <p><strong>HTML</strong></p>
               </div>
             </div>
@@ -211,7 +210,7 @@
               data-aos="fade-up"
             >
               <div class="content-image-logo">
-                <img loading='lazy' src="./assets/img/tecnologias/css.svg" alt="HTML" />
+                <img src="./assets/img/tecnologias/css.svg" alt="HTML" />
                 <p><strong>CSS</strong></p>
               </div>
             </div>
@@ -231,7 +230,7 @@
               data-aos="fade-up"
             >
               <div class="content-image-logo">
-                <img loading='lazy' src="./assets/img/tecnologias/bootstrap.svg" alt="HTML" />
+                <img src="./assets/img/tecnologias/bootstrap.svg" alt="HTML" />
                 <p><strong>BOOTSTRAP</strong></p>
               </div>
             </div>
@@ -241,7 +240,7 @@
               data-aos="fade-up"
             >
               <div class="content-image-logo">
-                <img loading='lazy' src="./assets/img/tecnologias/react.svg" alt="HTML" />
+                <img src="./assets/img/tecnologias/react.svg" alt="HTML" />
                 <p><strong>REACT</strong></p>
               </div>
             </div>
@@ -251,7 +250,7 @@
               data-aos="fade-up"
             >
               <div class="content-image-logo">
-                <img loading='lazy' src="./assets/img/tecnologias/redux.svg" alt="HTML" />
+                <img src="./assets/img/tecnologias/redux.svg" alt="HTML" />
                 <p><strong>REDUX</strong></p>
               </div>
             </div>
@@ -261,7 +260,7 @@
               data-aos="fade-up"
             >
               <div class="content-image-logo">
-                <img loading='lazy' src="./assets/img/tecnologias/router.svg" alt="HTML" />
+                <img src="./assets/img/tecnologias/router.svg" alt="HTML" />
                 <p><strong>ROUTER </strong></p>
               </div>
             </div>
@@ -271,7 +270,7 @@
               data-aos="fade-up"
             >
               <div class="content-image-logo">
-                <img loading='lazy' src="./assets/img/tecnologias/git.svg" alt="HTML" />
+                <img src="./assets/img/tecnologias/git.svg" alt="HTML" />
                 <p><strong>GIT</strong></p>
               </div>
             </div>
@@ -281,7 +280,7 @@
               data-aos="fade-up"
             >
               <div class="content-image-logo">
-                <img loading='lazy' src="./assets/img/tecnologias/github.svg" alt="HTML" />
+                <img src="./assets/img/tecnologias/github.svg" alt="HTML" />
                 <p><strong>GITHUB</strong></p>
               </div>
             </div>
@@ -364,7 +363,7 @@
           >
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
-                <img loading='lazy'
+                <img
                   src="assets/img/portfolio/ecommerce.png"
                   class="img-fluid"
                   alt=""
@@ -390,7 +389,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-card">
               <div class="portfolio-wrap">
-                <img loading='lazy'
+                <img
                   src="assets/img/portfolio/pokemon.png"
                   class="img-fluid"
                   alt=""
@@ -416,7 +415,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-card">
               <div class="portfolio-wrap">
-                <img loading='lazy'
+                <img
                   src="assets/img/portfolio/rickandmorty.png"
                   class="img-fluid"
                   alt=""
@@ -442,7 +441,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-card">
               <div class="portfolio-wrap">
-                <img loading='lazy'
+                <img
                   src="assets/img/portfolio/clima.png"
                   class="img-fluid"
                   alt=""
@@ -469,7 +468,7 @@
 
             <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
-                <img loading='lazy'
+                <img
                   src="assets/img/portfolio/CRUD.png"
                   class="img-fluid"
                   alt=""
@@ -501,10 +500,7 @@
         <div class="container">
           <div class="section-title">
             <h2>Habilidades</h2>
-            <i
-              >No importa raza, origen o nivel. Si no el como lo usas a tu
-              favor, para lograr grandes resultados.</i
-            >
+            <i>No importa raza, origen o nivel. Si no el como lo usas a tu favor, para lograr grandes resultados.</i>
           </div>
 
           <div class="row">
