--- a/index.html
+++ b/index.html
@@ -386,6 +386,31 @@
                 </div>
               </div>
             </div>
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+              <div class="portfolio-wrap">
+                <img
+                  src="https://jharolrojas.netlify.app"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="portfolio-links">
+                  <a
+                    href="assets/img/portfolio/courses.png"
+                    data-gallery="portfolioGallery"
+                    class="portfolio-lightbox"
+                    title="Plataforma para dictar cursos online.
+                    Html | Css | React | Redux | JavaScript"
+                    ><i class="bx bx-plus"></i
+                  ></a>
+                  <a
+                    href="https://jharolrojas.netlify.app"
+                    target="_blank"
+                    title="More Details"
+                    ><i class="bx bx-link"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-card">
               <div class="portfolio-wrap">
