--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           Soy
           <span
             class="typed"
-            data-typed-items="Ingeniero informático , Desarrollador web"
+            data-typed-items="Ingeniero Informático , Desarrollador Web"
           ></span>
         </p>
       </div>
