--- a/index.html
+++ b/index.html
@@ -389,13 +389,13 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
                 <img
-                  src="https://jharolrojas.netlify.app"
+                  src="assets/img/portfolio/courses.png"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/courses.png"
+                    href="https://jharolrojas.netlify.app"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     title="Plataforma para dictar cursos online.
