--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                 />
                 <div class="portfolio-links">
                   <a
-                    href="https://jharolrojas.netlify.app"
+                    href="assets/img/portfolio/courses.png"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     title="Plataforma para dictar cursos online.
