--- a/index.html
+++ b/index.html
@@ -284,6 +284,15 @@
                 <p><strong>GITHUB</strong></p>
               </div>
             </div>
+            <div
+            class="col-lg-2 col-md-2 d-md-flex col-sm-3 align-items-md-stretch d-flex justify-content-center align-items-center"
+            data-aos="fade-up"
+          >
+            <div class="content-image-logo">
+              <img src="./assets/img/tecnologias/nodejs.svg" alt="HTML" />
+              <p><strong>NODE.JS</strong></p>
+            </div>
+          </div>
           </div>
         </div>
       </section>
