--- a/index.html
+++ b/index.html
@@ -651,12 +651,8 @@
             </div>
 
             <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-              <!-- <form
-                action="https://formsubmit.co/workjharol@gmail.com"
-                method="POST"
-                class="form php-email-form"
-              > -->
-              <form action="https://formsubmit.co/jharolrojas1@gmail.com" method="POST" class="form php-email-form">
+             
+              <form action="https://formsubmit.co/workjharol@gmail.com" method="POST" class="form php-email-form">
                 <div class="row">
                   <div class="form-group col-md-6">
                     <label for="name">Nombre</label>
