--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
             data-aos="fade-up"
             data-aos-delay="100"
           >
-            <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
                 <img
                   src="assets/img/portfolio/ecommerce.png"
@@ -394,7 +394,7 @@
                   ></a>
                 </div>
               </div>
-            </div> -->
+            </div>
             <div class="col-lg-4 col-md-6 portfolio-item filter">
               <div class="portfolio-wrap">
                 <img
