--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                   Fanático de la vida, las personas, la comida y los animales. Me defino con los siguientes valores: comunicación, simplicidad, flexibilidad, respeto, tolerancia y perdón.</p>
              
 
-                <a href="RojasJharolCv.pdf" download>
+                <a href="JharolRojasCv.pdf" download>
                   <div class="cv">Descargar CV</div>
                 </a>
               </div>
