--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               target="_blank"
               ><i class="bi bi-github"></i
             ></a>
-            <a href="RojasJharolCv.pdf" download class="linkedin"
+            <a href="JharolRojasCV2023.pdf" download class="linkedin"
               ><i class="bi bi-file-earmark-person-fill"></i
             ></a>
             <a
