--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
               target="_blank"
               ><i class="bi bi-github"></i
             ></a>
-            <a href="JharolRojasCV2023.pdf" download class="linkedin"
+            <!-- <a href="JharolRojasCV2023.pdf" download class="linkedin"
               ><i class="bi bi-file-earmark-person-fill"></i
-            ></a>
+            ></a> -->
             <a
               href="https://app.netlify.com/teams/jharolrojas/sites"
               class="linkedin"
