--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                   simplicidad, flexibilidad, respeto, tolerancia y perdón.
                 </p>
 
-                <a href="JharolRojasCv.pdf" download>
+                <a href="JharolRojasCV2023.pdf" download>
                   <div class="cv">Descargar CV</div>
                 </a>
               </div>
