--- a/index.html
+++ b/index.html
@@ -92,8 +92,13 @@
               >
             </li>
             <li>
+              <a href="#facts" class="nav-link scrollto"
+                ><i class="bx bx-user"></i> <span>Tecnologias</span></a
+              >
+            </li>
+            <li>
               <a href="#resume" class="nav-link scrollto"
-                ><i class="bx bx-file-blank"></i> <span>Resumen</span></a
+                ><i class="bx bx-file-blank"></i> <span>Resumen</span></a 
               >
             </li>
             <li>
@@ -293,7 +298,18 @@
                 <img src="./assets/img/tecnologias/nodejs.svg" alt="HTML" />
                 <p><strong>NODE.JS</strong></p>
               </div>
+              
             </div>
+            <div
+            class="col-lg-2 col-md-2 d-md-flex col-sm-3 align-items-md-stretch d-flex justify-content-center align-items-center"
+            data-aos="fade-up"
+          >
+            <div class="content-image-logo">
+              <img src="./assets/img/tecnologias/express.png" alt="HTML" />
+              <p><strong>Express</strong></p>
+            </div>
+            
+          </div>
           </div>
         </div>
       </section>
