--- a/index.html
+++ b/index.html
@@ -310,6 +310,16 @@
             </div>
             
           </div>
+          <div
+          class="col-lg-2 col-md-2 d-md-flex col-sm-3 align-items-md-stretch d-flex justify-content-center align-items-center"
+          data-aos="fade-up"
+        >
+          <div class="content-image-logo">
+            <img src="./assets/img/tecnologias/sql.png" alt="HTML" />
+            <p><strong>SQL</strong></p>
+          </div>
+          
+        </div>
           </div>
         </div>
       </section>
