--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
               ><i class="bx bxl-linkedin"></i
             ></a>
             <a
-              href="https://github.com/jharolrojas"
+              href="https://github.com/authsimplecontrolca"
               class="linkedin"
               target="_blank"
               ><i class="bi bi-github"></i
             ></a>
-            <a href="JharolRojasCV2023.pdf" download class="linkedin"
+            <a href="CV_Jharol_rojas.pdf" download class="linkedin"
               ><i class="bi bi-file-earmark-person-fill"></i
             ></a>
             <a
