--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
                   src="./assets/img/tecnologias/jquery-vertical.svg"
                   alt="jQuery"
                 />
-                <p><strong>jQuery</strong></p>
+                <p><strong>JQUERY</strong></p>
               </div>
             </div>
             <div
@@ -491,7 +491,7 @@
                   src="./assets/img/tecnologias/wordpress-icon.svg"
                   alt="WordPress"
                 />
-                <p><strong>WordPress</strong></p>
+                <p><strong>WORDPRESS</strong></p>
               </div>
             </div>
             <div
@@ -503,7 +503,7 @@
                   src="./assets/img/tecnologias/elementor.svg"
                   alt="Elementor"
                 />
-                <p><strong>Elementor</strong></p>
+                <p><strong>ELEMENTOR</strong></p>
               </div>
             </div>
             <div
@@ -559,7 +559,7 @@
                   src="./assets/img/tecnologias/mysql-official.svg"
                   alt="MySQL"
                 />
-                <p><strong>MySQL</strong></p>
+                <p><strong>MYSQL</strong></p>
               </div>
             </div>
             <div
