--- a/index.html
+++ b/index.html
@@ -859,7 +859,7 @@
 
       <!-- EXPERIENCE END-->
       <!-- ======= Portfolio Section ======= -->
-      <section id="portfolio" class="portfolio section-bg">
+      <!-- <section id="portfolio" class="portfolio section-bg">
         <div class="container">
           <div class="section-title">
             <h2>Portafolio (Proyectos del 2022)</h2>
@@ -1093,7 +1093,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- End Portfolio Section -->
 
       <!-- ======= Services Section ======= -->
